added img to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Javascript Advanced Oppgave 1</title>
 </head>
 <body>
+
+    <img src="./assets/capybara.jpg" alt="cute capybara drinking water">
     
 </body>
 </html>
