added id to img tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <img src="./assets/capybara.jpg" alt="cute capybara drinking water">
+    <img id="move" src="./assets/capybara.jpg" alt="cute capybara drinking water">
     
 </body>
 </html>
