--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Javascript Advanced Oppgave 1</title>
 </head>
 <body>
-
+<div id="container">
     <img id="move" src="./assets/capybara.jpg" alt="cute capybara drinking water">
-    
+    </div>
 </body>
 </html>
