--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Javascript Advanced Oppgave 1</title>
 </head>
 <body>
+    <header>
+        <h1>Welcome to Capybara Land</h1>
+    </header>
 <div id="container">
     <img id="move" src="./assets/capybara.jpg" alt="cute capybara drinking water">
     </div>
