--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Capybara Land</h1>
+        <h1 id="title">Welcome to Capybara Land</h1>
     </header>
 <div id="container">
     <img id="move" src="./assets/capybara.jpg" alt="cute capybara drinking water">
