--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         
-        <h1 id="title">Welcome to Capybara Land</h1>
+        <h1 id="title"></h1>
     </header>
 <div id="container">
     <img id="move" src="./assets/capybara.jpg" alt="cute capybara drinking water">
