added position absolute + z index to #header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Javascript Advanced Oppgave 1</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         
         <h1 id="title"></h1>
     </header>
